--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ web/app/mu-plugins/*/
 web/app/upgrade
 web/app/uploads/*
 !web/app/uploads/.gitkeep
+web/app/uploads/cache/*
 !web/app/uploads/cache/.gitkeep
 
 # WordPress
