--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ web/app/plugins/*
 !web/app/plugins/.gitkeep
 web/app/mu-plugins/*/
 web/app/upgrade
-
+web/app/uploads/*
+!web/app/uploads/.gitkeep
+!web/app/uploads/cache/.gitkeep
 
 # WordPress
 web/wp
