--- a/shippable.yml
+++ b/shippable.yml
@@ -2,3 +2,11 @@ language: php
 
 php:
   - "7.0"
+
+build:
+  ci:
+    - php -v
+
+after_success:
+  - docker tag wordpress:latest 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:latest
+  - docker push 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:latest
