--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "wpackagist-plugin/cmb2": "dev-trunk"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.0.2"
+    "squizlabs/php_codesniffer": "^3.0.2",
+    "phpunit/phpunit": "~5.7"
   },
   "extra": {
     "installer-paths": {
