--- a/shippable.yml
+++ b/shippable.yml
@@ -6,3 +6,7 @@ php:
 build:
   ci:
     - php -v
+
+after_success:
+  - docker tag wordpress:latest 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:latest
+  - docker push 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:latest
