--- a/shippable.yml
+++ b/shippable.yml
@@ -8,7 +8,8 @@ build:
   ci:
     - php -v
   post_ci:
-    - docker push 824574892225.dkr.ecr.eu-west-2.amazonaws.com/image-name:image-tag
+    - docker tag Enterprise-WordPress:latest 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:latest
+    - docker push 824574892225.dkr.ecr.eu-west-2.amazonaws.com/Enterprise-WordPress:latest
 
 integrations:
   hub:
