--- a/shippable.yml
+++ b/shippable.yml
@@ -1,12 +1,11 @@
 language: php
 
-
 php:
   - "7.0"
 
 build:
   ci:
-    - php -v
+    - ./vendor/bin/phpunit
   post_ci:
     - docker build -t 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:$BRANCH.$BUILD_NUMBER .
   push:
