--- a/composer.json
+++ b/composer.json
@@ -41,16 +41,17 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "wp-cli/wp-cli": "*",
 
-    "wpackagist-plugin/cmb2": "dev-trunk"
+    "wpackagist-plugin/cmb2": "dev-trunk",
+    "phpunit/phpunit": "^5.7",
+    "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.0.2",
-    "phpunit/phpunit": "~5.7"
+    "squizlabs/php_codesniffer": "^3.0.2"
   },
   "extra": {
     "installer-paths": {
       "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
-      "web/app/mu-plugins/{$name}/": ["type:wordpress-plugin"],
+      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/app/themes/{$name}/": ["type:wordpress-theme"]
     },
     "wordpress-install-dir": "web/wp"
