--- a/shippable.yml
+++ b/shippable.yml
@@ -7,15 +7,12 @@ before_script:
   - composer install
   - cd web/app/themes/example-theme && composer install
 
-script:
-    - pwd -P
-    - ls
-    - phpunit --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage
-
 build:
   ci:
     - ls
+    - ls vendor/bin
     - pwd -P
+    - phpunit --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage
   post_ci:
     - docker build -t 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:$BRANCH.$BUILD_NUMBER .
   push:
