--- a/shippable.yml
+++ b/shippable.yml
@@ -12,6 +12,7 @@ build:
     - ls
     - ls vendor/bin
     - pwd -P
+    - cat composer.json
     - phpunit --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage
   post_ci:
     - docker build -t 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:$BRANCH.$BUILD_NUMBER .
