--- a/shippable.yml
+++ b/shippable.yml
@@ -11,7 +11,7 @@ build:
     - ls
     - ls vendor/bin
     - composer install
-    - apache2-foreground
+    - /usr/local/bin/apache2-foreground
     - ./vendor/bin/phpunit
   post_ci:
     - docker build -t 824574892225.dkr.ecr.eu-west-2.amazonaws.com/wordpress:$BRANCH.$BUILD_NUMBER .
