--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     "wp-cli/wp-cli": "*",
 
     "wpackagist-plugin/cmb2": "dev-trunk",
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "^5.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2"
